[gd_scene load_steps=2 format=3 uid="uid://bg5tsici80b54"]

[ext_resource type="Script" uid="uid://m4h6od6bqw1d" path="res://main_menu.gd" id="1_06t4h"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06t4h")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="LvlSelect" type="MenuButton" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Level Select"
item_count = 4
popup/item_0/text = "Level 1"
popup/item_0/id = 0
popup/item_1/text = "Level 2"
popup/item_1/id = 1
popup/item_2/text = "Level 3"
popup/item_2/id = 2
popup/item_3/text = "Level 4"
popup/item_3/id = 3

[node name="Options" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
